# auto-planning-project

./: .gitignore  BENCHMARK_PROBLEMS.md  README.md  benchmark_results.json  benchmark_results_numeric.json  benchmark_results_numeric_anytime.json  benchmark_results_prob10.json  benchmark_results_summon.json  benchmark_results_summon_anytime.json  benchmark_summary.csv  cbp_execute.ps1  check_planners.py  convert_problems_to_fd.py  domain-fd.pddl  enhsp-plots.py  generate_fd_bench.py  generate_placeholder_fd_problem.py  main.py  output.sas  placeholder-fd.pddl  planning_stats.json  problem-01-fd.pddl  problem-02-fd.pddl  problem-02.pddl  problem-03-fd.pddl  problem-04-fd.pddl  problem-05-fd.pddl  problem-06-fd.pddl  problem-07-fd.pddl  problem-07.pddl  problem-08-fd.pddl  problem-09-fd.pddl  problem-10-fd.pddl  problem-11-fd.pddl  problem-fd.pddl  problem.pddl  pyproject.toml  quick_test.ps1  run_enhsp_tests.sh  run_enhsp_tests_anytime.sh  (+13 more)
darksouls-fd/: domain.pddl  problem-01.pddl  problem-02.pddl  problem-03.pddl  problem-04.pddl  problem-05.pddl  problem-06.pddl  problem-07.pddl  problem-08.pddl  problem-09.pddl  problem-10.pddl  problem-11.pddl  problem-bench-01.pddl  problem-bench-02.pddl  problem-bench-03.pddl  problem-bench-04.pddl  problem-bench-05.pddl  problem-bench-06.pddl  problem-bench-07.pddl  problem-bench-08.pddl  problem-bench-09.pddl  problem-bench-10.pddl  problem-difficulty-01.pddl  problem.pddl
darksouls-invocations/: domain.pddl  problem-bench-01.pddl  problem-bench-02.pddl  problem-bench-03.pddl  problem-bench-04.pddl  problem-bench-05.pddl  (+5 more)
(+117 files in other folders)
