[project]
name = "auto-planning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "plotly>=6.5.0",
    "unified-planning>=1.3.0",
    "up-enhsp>=0.1.0",
    "up-fast-downward>=0.5.2",
]
