[project]
name = "auto-planning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "unified-planning[all,engine,engines,smt]>=1.3.0",
    "up-enhsp>=0.1.0",
    "up-fast-downward>=0.5.2",
]
